--- a/main.html
+++ b/main.html
@@ -1,14 +1,44 @@
 <!doctype html>
 <html lang="en">
+<head>
+<style>
+body {
+    font-family: consolas, menlo, monospace;
+}
+table {
+    border-collapse: collapse;
+}
+table td,
+table th {
+    border: 1px solid #000;
+}
+</style>
+</head>
 <body>
-<button>create protected enemy1</button><br>
-<button>create protected enemy2</button><br>
-<label>stdout</label><br>
+<button id="enemyCreate1">create protected slime enemy</button><br>
+<table id="enemyTable1">
+    <thead>
+    <tr>
+        <th></th>
+        <th>rowid</th>
+        <th>type</th>
+        <th>health</th>
+    </tr>
+    </thead>
+    <tbody>
+    <tr>
+        <td><button>[protected] reduce health by 1</button></td>
+        <td>rowid</td>
+        <td>type</td>
+        <td>health</td>
+    </tr>
+    </tbody>
+</table>
 <textarea readonly="1">
 </textarea>
 <script>
 /* jslint utility2:true */
-(async function () {
+(function () {
     "use strict";
     let protectedDatabase;
     let sqlCallbackDict;
@@ -66,9 +96,76 @@
     }) {
         sqlCallbackDict[data.id](data);
     };
-    console.log(await protectedMessagePost({
-        sql: "select 1 as aa;\n"
-    }));
+    // init enemy-api
+    let enemyIdDict;
+    enemyIdDict = {};
+    async function enemyCreate({
+        health,
+        type
+    }) {
+        let data;
+        let enemy;
+        let enemyid;
+        data = await protectedMessagePost({
+            sql: (`
+CREATE TABLE IF NOT EXISTS enemy (
+    type TEXT NOT NULL,
+    health INTEGER NOT NULL
+);
+INSERT INTO enemy (type, health) VALUES ('${type}', ${health});
+SELECT LAST_INSERT_ROWID() AS enemyid;
+            `)
+        });
+        enemyid = data[0][0].enemyid;
+        enemy = {};
+        enemy.id = enemyid;
+        enemy.protectedHealthReduce = async function (amount) {
+            await protectedMessagePost({
+                sql: (`
+UPDATE enemy SET health = health - ${amount} WHERE rowid = ${enemyid};
+                `)
+            });
+        };
+        enemyIdDict[enemyid] = enemy;
+        return enemy;
+    }
+    async function enemyListGet() {
+        let data;
+        data = await protectedMessagePost({
+            sql: `SELECT rowid, * FROM enemy`
+        });
+        return data[0];
+    }
+    // export enemy-api
+    window.enemyCreate = enemyCreate;
+    window.enemyListGet = enemyListGet;
+}());
+
+(async function () {
+    "use strict";
+    async function enemyListRefresh() {
+        let enemyList;
+        enemyList = await window.enemyListGet();
+        document.querySelector(
+            "#enemyTable1 tbody"
+        ).innerHTML = enemyList.map(function ({
+            health,
+            rowid,
+            type
+        }) {
+            return `<li>f</li>`;
+        });
+    }
+    async function enemySlimeCreate() {
+        let enemy;
+        enemy = window.enemyCreate({
+            health: 10,
+            type: "slime"
+        });
+        return enemy;
+    }
+    let enemy = await enemySlimeCreate();
+    console.log(await window.enemyListGet());
 }());
 </script>
 </body>
